# rust-gameserver

./: .gitignore  Cargo.toml
src/: main.rs
src/game/: main_loop.rs  mod.rs  player.rs  room.rs
src/network/: client.rs  handler.rs  mod.rs  socket.rs
src/utils/: mod.rs  split_message.rs
