[package]
name = "pr-gameserver"
version = "0.1.0"
authors = ["Matej Strnad <matej.strnad.97@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros", "sync", "rt-threaded"] }
warp = {version = "0.2" }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "0.4", features = ["serde", "v4"] }
gameloop = "0.2.0"